--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,13 @@ version: '3'
 services:
   pw:
     environment: 
-      - VIRTUAL_HOST=yourapp.localtest.me # *.localtest.me subdomains will always point to 127.0.0.1 on every computer in the world...easy way to use multiple hostnames on a windows dev machine.
+      - VIRTUAL_HOST=myapp.localtest.me # *.localtest.me subdomains will always point to 127.0.0.1 on every computer in the world...easy way to use multiple hostnames on a windows dev machine.
     depends_on:
       - db
-    image: gebeer/alpine-php-processwire
+    build:
+      context: .
+      dockerfile: Dockerfile-php
+    image: joel-alpine-php-processwire
     networks:
       - default
       - proxy
@@ -13,17 +16,17 @@ services:
       - ./src:/DATA/htdocs
       - ./logs:/DATA/logs
   
-    db:
-      image: mariadb
-      networks:
-        - default
-      volumes:
-        - mysql:/var/lib/mysql
-      environment:
-        - MYSQL_ROOT_PASSWORD=rootpassword
-        - MYSQL_DATABASE=processwire
-        - MYSQL_USER=processwire
-        - MYSQL_PASSWORD=password
+  db:
+    image: mariadb
+    networks:
+      - default
+    volumes:
+      - mysql:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=rootpassword
+      - MYSQL_DATABASE=processwire
+      - MYSQL_USER=processwire
+      - MYSQL_PASSWORD=password
 
 volumes:
   mysql:
