Pass Host IP address as build arg for docker image to enable Xdebug

--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -1,11 +1,14 @@
 FROM gebeer/alpine-php-processwire
 MAINTAINER rastographics <rastographics@gmail.com>
+ARG docker_hostip
+RUN echo "Host IP is: $docker_hostip"
+RUN apk update
+RUN apk add php7-xdebug \
+--update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing/
 
-RUN apk add --update php7-xdebug && \
-echo 'zend_extension=/usr/lib/php7/modules/xdebug.so' >> /etc/php7/conf.d/xdebug.ini && \
+RUN echo 'zend_extension=/usr/lib/php7/modules/xdebug.so' >> /etc/php7/conf.d/xdebug.ini && \
 echo 'xdebug.remote_enable=1' >> /etc/php7/conf.d/xdebug.ini && \
-# echo 'xdebug.remote_handler=dbgp' >> /etc/php7/conf.d/xdebug.ini && \
-# echo 'xdebug.remote_mode=req' >> /etc/php7/conf.d/xdebug.ini && \
-echo 'xdebug.remote_connect_back=1' >> /etc/php7/conf.d/xdebug.ini && \
+echo 'xdebug.remote_connect_back=0' >> /etc/php7/conf.d/xdebug.ini && \
 echo 'xdebug.remote_log="/DATA/logs/xdebug.log"' >> /etc/php7/conf.d/xdebug.ini && \
+echo "xdebug.remote_host=$docker_hostip" >> /etc/php7/conf.d/xdebug.ini && \
 echo 'xdebug.remote_autostart=1' >> /etc/php7/conf.d/xdebug.ini
