explain docker_hostip in readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ services:
   pw:
     environment: 
       - VIRTUAL_HOST=myapp.localtest.me # *.localtest.me subdomains will always point to 127.0.0.1 on every computer in the world...easy way to use multiple hostnames on a windows dev machine.
-    depends_on:
-      - db
     build:
+      args:
+        - docker_hostip=10.7.0.164 #REPLACE this IP with the LAN IP of your host machine. (This is so Xdebug can communicate with your IDE on host machine).
       context: .
       dockerfile: Dockerfile-php
-      args:
-        - docker_hostip=10.7.0.164
     image: joel-alpine-php-processwire
+    depends_on:
+      - db
     networks:
       - default
       - proxy
