--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -2,13 +2,23 @@ FROM gebeer/alpine-php-processwire
 MAINTAINER rastographics <rastographics@gmail.com>
 ARG docker_hostip
 RUN echo "Host IP is: $docker_hostip"
-RUN apk update
-RUN apk add php7-xdebug \
---update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing/
+RUN apk update && apk upgrade && \
+apk add openssl php7-dev gcc musl-dev make \
+#--update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing/ 
+&& wget -P /tmp http://xdebug.org/files/xdebug-2.5.4.tgz \
+&& cd tmp \
+&& tar -xvzf xdebug-2.5.4.tgz \
+&& cd xdebug-2.5.4 \
+&& phpize \
+&& ./configure \
+&& make \
+&& cp modules/xdebug.so /usr/lib/php7/modules \
 
-RUN echo 'zend_extension=/usr/lib/php7/modules/xdebug.so' >> /etc/php7/conf.d/xdebug.ini && \
-echo 'xdebug.remote_enable=1' >> /etc/php7/conf.d/xdebug.ini && \
+&& echo '[xdebug]' > /etc/php7/conf.d/xdebug.ini && \
+echo 'zend_extension=/usr/lib/php7/modules/xdebug.so' >> /etc/php7/conf.d/xdebug.ini && \
+echo 'xdebug.remote_enable=on' >> /etc/php7/conf.d/xdebug.ini && \
 echo 'xdebug.remote_connect_back=0' >> /etc/php7/conf.d/xdebug.ini && \
 echo 'xdebug.remote_log="/DATA/logs/xdebug.log"' >> /etc/php7/conf.d/xdebug.ini && \
 echo "xdebug.remote_host=$docker_hostip" >> /etc/php7/conf.d/xdebug.ini && \
-echo 'xdebug.remote_autostart=1' >> /etc/php7/conf.d/xdebug.ini
+echo 'xdebug.remote_autostart=on' >> /etc/php7/conf.d/xdebug.ini
+
