--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       args:
         - docker_hostip=10.7.0.164 #REPLACE this IP with the LAN IP of your host machine. (This is so Xdebug can communicate with your IDE on host machine).
       context: .
-      dockerfile: Dockerfile-php
+      dockerfile: app-dockerfile
     image: joel-alpine-php-processwire
     depends_on:
       - db
